name:                getting-started-with-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/getting-started-with-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Djoe Pramono
maintainer:          not@supplied.com
copyright:           2019 Djoe Pramono 
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable getting-started-with-haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5 
                       , mtl >= 2.2.2
                       , transformers
  -- ghc-options:         -fwarn-incomplete-patterns

-- library
  -- ghc-options:         -fwarn-incomplete-patterns


